<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:splitMotionEvents="false">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title"
        android:fontFamily="sans-serif-black"
        android:text="@string/confirm_contact_details_title"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/width_edit_text2"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginStart="@dimen/margin_start_edit_text2"
        android:text="@string/txt_name"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtFullName"
        android:layout_width="@dimen/width_edit_text3"
        android:layout_height="@dimen/height_edit_text"
        android:gravity="top"
        android:text="@string/hyphen"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/width_edit_text2"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginStart="@dimen/margin_start_edit_text2"
        android:text="@string/txt_date"
        android:textSize="@dimen/text_size_edit_text"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtDate"
        android:layout_width="@dimen/width_edit_text3"
        android:layout_height="@dimen/height_edit_text"
        android:text="@string/hyphen"
        android:gravity="top"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/width_edit_text2"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginStart="@dimen/margin_start_edit_text2"
        android:text="@string/txt_phone"
        android:textSize="@dimen/text_size_edit_text"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.4" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtPhone"
        android:layout_width="@dimen/width_edit_text3"
        android:layout_height="@dimen/height_edit_text"
        android:text="@string/hyphen"
        android:gravity="top"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/width_edit_text2"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginStart="@dimen/margin_start_edit_text2"
        android:text="@string/txt_email"
        android:textSize="@dimen/text_size_edit_text"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtEmail"
        android:layout_width="@dimen/width_edit_text3"
        android:layout_height="@dimen/height_edit_text"
        android:text="@string/hyphen"
        android:gravity="top"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/width_edit_text2"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginStart="@dimen/margin_start_edit_text2"
        android:text="@string/txt_description"
        android:textSize="@dimen/text_size_edit_text"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.6"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtDescription"
        android:layout_width="@dimen/width_edit_text3"
        android:layout_height="@dimen/height_edit_text"
        android:text="@string/hyphen"
        android:gravity="top"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/edit_button_title"
        android:textSize="16sp"
        android:background="@color/primary_dark"
        android:textColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>