<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:splitMotionEvents="false">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title"
        android:fontFamily="sans-serif-black"
        android:text="@string/registration_of_personal_data_title"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_black_48dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtFullName"
        android:layout_width="@dimen/width_edit_text"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginStart="100dp"
        android:hint="@string/txt_name"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_date_range_black_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtDate"
        android:layout_width="190dp"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginStart="100dp"
        android:hint="@string/txt_date"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDate"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/ic_date_range_black_48dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />


    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_phone_black_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtPhone"
        android:layout_width="@dimen/width_edit_text"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginStart="100dp"
        android:hint="@string/txt_phone"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        android:inputType="number"
        android:digits="0123456789"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_email_black_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtEmail"
        android:layout_width="@dimen/width_edit_text"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginStart="100dp"
        android:hint="@string/txt_email"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_description_black_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtDescription"
        android:layout_width="@dimen/width_edit_text"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:hint="@string/txt_description"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_edit_text"
        android:minLines="2"
        android:maxLines="3"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/primary_dark"
        android:onClick="onClick"
        android:text="@string/continue_button_title"
        android:textColor="@color/icons"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>